--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="span9">
 						<h2 class="logo"> <a href="http://cv.benoror.com">Ben Orozco</a> </h2>
-						<h5 class="logo">CTO - Software Architect - Full Stack Web Developer</h5>
+						<h5 class="logo">CTO - Full Stack Developer</h5>
 						<h5 class="logo">MBA International Business Consulting </h5>
 						<h5 class="logo">BS Computer Science and Technology</h5>
 					</div>
@@ -30,8 +30,8 @@
               <li>🌐 <a href="http://www.benoror.com">benoror.com</a></li>
               <!-- <li><span class="icon icon-facetime-video"></span><a href="skype:benoror86">benoror86</a></li> -->
               <li>🚧 <a href="https://github.com/benoror">github.com/benoror</a></li>
+              <li>💼 <a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
               <li>📖 <a href="http://blog.benoror.com">blog.benoror.com</a></li>
-              <li>🧐 <a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
               <!-- <li><span class="icon icon-play"></span><a href="https://www.livecoding.tv/benoror">livecoding.tv/benoror</a></li> -->
               <!-- <li><span class="icon icon-retweet"></span><a href="https://www.twitter.com/benoror">twitter.com/benoror</a></li> -->
 						</ul>
@@ -40,11 +40,17 @@
 						<!-- <img class="self-picture" src="Foto_CV_medium_BlueTie.jpg" alt="self-picture" /> -->
 					</div>
 				</div>
-				<!-- <div class="row">
-					<div class="span12">
-						<h2 class="cv-profile">BS Computer Science engineer as web developer, database administration, business intelligence. SAP certified on SAP HANA and Cloud technologies. MBA in International Business Consulting. Entrepreneur on a handful of ideas into web apps, on my own or with partners. Experienced in construction project management for the residential market in México.</h2>
-					</div>
-				</div> -->
+
+        <div class="hr hide-on-phone"></div>
+
+        <div class="row">
+          <div class="span12 cv-profile">
+            Computer Science Engineer, MBA specialized in Software Development for the Healthcare industry.
+            Passionate about leading software development teams to tackle big real-world challenges and leveraging technology to build products that add value to end users.
+            Former CTO of a EHR/HIS/ERP Software company with thousands of customers in Latin American health networks and presence in Middle and Far East.
+            Prior experience includes working on multinational software companies such as SAP AG, as well as several leadership roles in Tech Startups for the last 9+ years.
+          </div>
+        </div>
 
         <div class="hr hide-on-phone"></div>
 
