--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h6><a href="http://www.ecaresoft.com/">Ecaresoft Inc.</a></h6>
             <p>
               <span class="mute">Monterrey, MX</span><br/>
-              <span class="mute">Feb 2018 - Present</span><br/>
+              <span class="mute">Feb 2018 - Jan 2019</span><br/>
             </p>
             <a href="https://www.getcirrus.com/en">Cirrus</a>,
             <a href="https://www.usenebula.com/">Nebula</a>,
@@ -107,31 +107,9 @@
 
         <div class="row">
           <div class="span3 cv-item-description">
-            <a href="https://www.usenebula.com/">Nebula</a><br/>
-            <p>
-              <span class="mute">Oct 2017 - Jul 2018</span><br/>
-            </p>
-          </div>
-          <div class="span9 cv-item-details">
-            <h4>Lead Software Architect</h4>
-            <details>
-              <summary>Bootstraped technical development & software architecture for eClaims management solution</summary>
-              <p>
-                <ul>
-                  <li>Elixir / Phoenix development</li>
-                  <li>Microservices oriented architecture</li>
-                  <li>Amazon Web Services DevOps and infraestructure (Elastic Beanstalk)</li>
-                </ul>
-              </p>
-            </details>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="span3 cv-item-description">
             <a href="http://www.nimbo-x.com/">Nimbo</a>
             <p>
-              <span class="mute">Feb 2016 - Feb 2018</span><br/>
+              <span class="mute">Feb 2016 - Jan 2019</span><br/>
             </p>
           </div>
           <div class="span9 cv-item-details">
@@ -159,6 +137,28 @@
                     <li>Prescription drugs interactions engine based on Wolters Kluwer's Medi-Span®</li>
                     <li>AI prediction engine for diagnostics &amp; treatments based on Tensorflow</li>
                   </ul>
+                </ul>
+              </p>
+            </details>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span3 cv-item-description">
+            <a href="https://www.usenebula.com/">Nebula</a><br/>
+            <p>
+              <span class="mute">Oct 2017 - Jul 2018</span><br/>
+            </p>
+          </div>
+          <div class="span9 cv-item-details">
+            <h4>Lead Software Architect</h4>
+            <details>
+              <summary>Bootstraped technical development & software architecture for eClaims management solution</summary>
+              <p>
+                <ul>
+                  <li>Elixir / Phoenix development</li>
+                  <li>Microservices oriented architecture</li>
+                  <li>Amazon Web Services DevOps and infraestructure (Elastic Beanstalk)</li>
                 </ul>
               </p>
             </details>
@@ -395,7 +395,7 @@
 
 				<div class="row">
 					<div class="span3 cv-item-description">
-						<h6>BI / DBA</h6>
+						<h6>DBA / BI</h6>
 					</div>
 					<div class="span9 cv-item-details">
 						<p>
