--- a/index.html
+++ b/index.html
@@ -67,6 +67,34 @@
 
         <div class="row">
           <div class="span3 cv-item-description">
+            <h6><a href="https://www.healthtree.org">HealthTree</a></h6>
+            <p>
+              <span class="mute">Salt Lake City, Utah, US</span><br/>
+              <span class="mute">Jan 2019 - Present</span>
+            </p>
+          </div>
+          <div class="span9 cv-item-details">
+            <h4>Chief Technology Officer (CTO)</h4>
+            <details open>
+              <summary>
+								Building a modern healthcare platform for helping Multiple Myeloma Cancer patients to find their best treatment options, with a mission to accelerate the finding of the cure for this disease, and potentially many others, by leveraging on technology and out-of-the-box thinking.
+							</summary>
+              <p>
+                <ul>
+									<li>Full-stack coding & operations</li>
+									<li>Definition of technology strategy and software architecture</li>
+                  <li>Implement Agile software development methodologies to prioritize the roadmap and measure optimal performance</li>
+									<li>Technical leadership of engineering team</li>
+                  <li>Mentor, coach, and lead team members to achieve their personal best</li>
+									<li>Recruit and retain top talent in a competitive market</li>
+                </ul>
+							</p>
+            </details>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span3 cv-item-description">
             <h6><a href="http://www.ecaresoft.com/">Ecaresoft Inc.</a></h6>
             <p>
               <span class="mute">Monterrey, MX</span><br/>
@@ -78,7 +106,7 @@
           </div>
           <div class="span9 cv-item-details">
             <h4>Chief Technology Officer (CTO)</h4>
-            <details open>
+            <details>
               <summary>
                 Work closely with members of the executive team, lead technology strategy, software development and SaaS operations.
                 Merger of all product lines under a single Engineering organization culture.
