Tech lead keywords

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="span9">
 						<h2 class="logo"> <a href="http://cv.benoror.com">Ben Orozco</a> </h2>
-						<h5 class="logo">Full Stack Software Developer</h5>
+						<h5 class="logo">Tech Lead - Full Stack Developer - Software Engineer</h5>
 						<h5 class="logo">MBA International Business Consulting </h5>
 						<h5 class="logo">BS Computer Science and Technology</h5>
 					</div>
@@ -45,10 +45,9 @@
 
 				<div class="row">
           <div class="span12 cv-profile">
-            Computer Science Engineer specialized in Full Stack web development.
-            Passionate about launching end-to-end customer-driven software products, leading engineering teams and leveraging technology to tackle big real-world problems.
-            Former CTO of Healthcare startups with thousands of users in U.S., LatAm, Middle and Far East.
-            Prior experience includes technical leadership in SaaS startups and software engineering in SAP.</span></div>
+            Software engineer specialized in leading technical teams and full stack web development.
+            Passionate about launching end-to-end & customer-driven software products, coaching engineers and leveraging technology to tackle real-world challenges.
+            Former CTO of SaaS startups with thousands of users in U.S. & LATAM.</span></div>
         </div>
 
         <div class="hr hide-on-phone"></div>
